# frantik

./: CMakeLists.txt  README.md
.github/workflows/: wheels.yml
scripts/: test.py  test_jax.py
src/cpp/: frantik.cc  ik.hh
src/frantik/: __init__.py
